# my-rasterizer

./: .gitignore  CMakeLists.txt  README.md
include/: Block.h  Cache.h  Camera.h  Clock.h  Data.h  DataHandler.h  DataManager.h  FileStreamCache.h  Job.h  Plane.h  Point.h  Profiler.h  Queue.h  Rasterizer.h  Shader.h  Slot.h  SubslotsCache.h  Timer.h  Utils.h  utils.h
include/glad/: glad.h
src/: Cache.cpp  Camera.cpp  Data.cpp  DataHandler.cpp  DataManager.cpp  FileStreamCache.cpp  Job.cpp  Plane.cpp  Rasterizer.cpp  SubslotsCache.cpp  glad.c  main.cpp
src/shader/: shader.frag  shader.vert
